data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_411.wast
;; 2. **Test Description**: A loop block with an inner `block` that conditionally executes an `unreachable` instruction if the loop count exceeds a certain number. Ensure loop unwinding and correct branch evaluation within nested blocks:    - **Constraint Checked**: Correct loop unwinding and inner block branching.    - **Unreachable Code Execution**: Incorrect counting or branch evaluation might lead to reaching `unreachable` prematurely.

(assert_invalid
 (module
  (func $loop-inner-block-unreachable (param i32) (result i32)
   (loop (result i32)
    (block
     (br_if 0 (local.get 0))
     (unreachable)
    )
    (i32.const 1)
   )
  )
 )
 "type mismatch"
)